# Data-Structures-labs

1klies-Lab7/: 1klies.cpp  1klies_grinder.cpp  CMakeLists.txt
1klies-Lab7/1klies-data/: mergesortAscending.csv  mergesortDescending.csv  mergesortRandom.csv  quicksortAscending.csv  quicksortDescending.csv  quicksortRandom.csv  selectionsortAscending.csv  selectionsortDescending.csv  selectionsortRandom.csv
1klies-Lab7/include/1klies/: mergesort.hpp  quicksort.hpp  result.hpp  selectionsort.hpp  sort.hpp  utilities.hpp
Gossip-Lab6/: CMakeLists.txt  gossip.cpp  gossiper.cpp
Gossip-Lab6/include/gossiper/: gossiper.hpp
Gossip-Lab6/include/stack/: stack.hpp
ShippingContainer-Lab2/: CMakeLists.txt  main.cpp
ShippingContainer-Lab2/include/teu/: teu.hpp
UChristies-Lab1/: CMakeLists.txt  coin.cpp  gradable.cpp  uchristies.cpp
UChristies-Lab1/include/: coin.h  gradable.h
ordershewrote-Lab4/: CMakeLists.txt  main.cpp
ordershewrote-Lab4/include/ordershewrote/: cancouriertake.hpp  item.hpp  order.hpp
ordershewrotell-Lab5/: CMakeLists.txt  item.cpp  main.cpp  order.cpp
ordershewrotell-Lab5/include/ordershewrote/: cancouriertake.hpp  order.hpp
palanydrome-Lab3/: CMakeLists.txt  main.cpp
palanydrome-Lab3/include/palanydrome/: ispalanydrome.hpp
